--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,190 @@
 
+html, body{
+	font-family: Arial, Helvetica, sans-serif;
+	width: 100%;
+	margin: auto;
+}
+
+.header{
+	background-color:black;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 25px 0 25px;
+	height: 40px;
+}
+
+.p-header{
+	color:white;
+	font-size: 13px;
+	font-weight: lighter;
+	letter-spacing: 1px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.fa{
+	cursor: pointer;
+}
+
+.logo{
+  width: 35%;
+  padding-right: 70px;
+}
+
+img{
+	width: 100%;
+}
+
+.sidenav {
+	height: 100%; 
+	width: 0; 
+	position: fixed; 
+	z-index: 1; 
+	top: 39px; 
+	left: 0;
+	background-color:black; 
+	overflow-x: hidden; 
+	padding-top: 60px;
+	transition: 0.5s; 
+  }
+  
+	.sidenav a {
+		padding: 8px 8px 8px 32px;
+		text-decoration: none;
+		font-size: 18px;
+		color: #818181;
+		display: block;
+		transition: 0.3s;
+  	}
+  
+  	.sidenav a:hover {
+		color: #f1f1f1;
+  	}
+  
+  	.sidenav .closebtn {
+		position: absolute;
+		top: 0;
+		right: 25px;
+		font-size: 36px;
+		margin-left: 50px;
+  	}
+  
+  	#main {
+		transition: margin-left .5s;
+  	}
+  
+  	@media screen and (max-height: 450px){
+		.sidenav {padding-top: 15px;}
+		.sidenav a {font-size: 18px;}
+  	}
+
+.head-2{
+	background-color: white;
+	width: 100%;
+	height:120px;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	margin-right: auto;
+	margin-left: auto;
+}
+  
+.search-input{
+	align-items: center;
+	display: flex;
+	padding-left: 25px;
+	width:200px;
+	justify-content: space-around;	
+
+}
+
+input[type=text]{
+	outline: none;
+	border: solid 1px grey;
+	height: 30px;
+	padding-left: 30px;
+	background: white url(../img/search-icon.png) no-repeat;
+	background-size: 1rem;
+	background-position: 6px;
+}
+
+.other-icons{
+	width:120px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding-right: 25px;
+	
+}
+
+.banner{
+	width: 100%;
+	height: 600px;
+	position: relative;
+	list-style: none;
+	padding: 0;
+}
+
+	.banner__item,
+	.banner__image{
+		height: inherit;
+		width: inherit;
+	}
+
+	.banner__item{
+		position: relative;
+	}
+
+	.banner__image{
+		object-fit: cover;
+		object-position: center center;
+		position: absolute;
+	}
+	.cycle-slideshow{
+		margin: 0;
+	}
+
+	.cycle-pager{
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		text-align: center;
+		z-index: 1000;
+	}
+		.cycle-pager span{
+			font-size: 30px;
+			color:black;
+			cursor: pointer;
+			display: inline-block;
+			margin: 5px;
+		}
+
+		.cycle-pager-active,
+		.cycle-pager span:hover{
+			color: white;
+		}
+
+	.banner__prev,
+	.banner__next{
+		text-decoration: none;
+		display: inline-block;
+		background-color: #000;
+		color: #fff;
+		width: 30px;
+		height: 30px;
+		line-height: 30px;
+		text-align: center;
+		border-radius: 50%;
+		position: absolute;
+		top: 50%;
+		z-index: 1000;
+	}
+	.banner__prev{
+		left: 10px;
+	}
+	.banner__next{
+		right: 10px;
+	}
+
+
