--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ input[type=text]{
 .banner{
 	width: 100%;
 	height: 600px;
-	position: relative;
+	position: fixed;
 	list-style: none;
 	padding: 0;
 }
