--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,9 @@ img{
 	padding-left: 25px;
 	width:200px;
 	justify-content: space-around;	
-
 }
 
-input[type=text]{
+{
 	outline: none;
 	border: solid 1px grey;
 	height: 30px;
@@ -115,7 +114,6 @@ input[type=text]{
 	justify-content: space-around;
 	align-items: center;
 	padding-right: 25px;
-	
 }
 
 .banner{
@@ -126,17 +124,17 @@ input[type=text]{
 	padding: 0;
 }
 
-	.banner__item,
-	.banner__image{
+	.banner-item,
+	.banner-image{
 		height: inherit;
 		width: inherit;
 	}
 
-	.banner__item{
+	.banner-item{
 		position: relative;
 	}
 
-	.banner__image{
+	.banner-image{
 		object-fit: cover;
 		object-position: center center;
 		position: absolute;
@@ -153,11 +151,13 @@ input[type=text]{
 		z-index: 1000;
 	}
 		.cycle-pager span{
-			font-size: 30px;
+			font-size: 60px;
 			color:black;
 			cursor: pointer;
 			display: inline-block;
 			margin: 5px;
+			opacity: .5;
+    		transition: opacity .6s ease;
 		}
 
 		.cycle-pager-active,
@@ -165,8 +165,8 @@ input[type=text]{
 			color: white;
 		}
 
-	.banner__prev,
-	.banner__next{
+	.banner-prev,
+	.banner-next{
 		text-decoration: none;
 		display: inline-block;
 		background-color: #000;
@@ -180,11 +180,18 @@ input[type=text]{
 		top: 50%;
 		z-index: 1000;
 	}
-	.banner__prev{
+	.banner-prev{
 		left: 10px;
 	}
-	.banner__next{
+	.banner-next{
 		right: 10px;
 	}
 
+	.event{
+		width:80%;
+		text-align: center;
+		margin:0 auto;
+		
+		
+	}
 
