--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ html, body{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 25px 0 25px;
 	height: 40px;
 }
 
@@ -32,8 +31,15 @@ html, body{
   padding-right: 70px;
 }
 
+.images{
+	display: flex;
+	flex-wrap: wrap;
+	
+}
+
 img{
-	width: 100%;
+	width:100%;
+	
 }
 
 .sidenav {
@@ -70,20 +76,16 @@ img{
 		margin-left: 50px;
   	}
   
-  	#main {
-		transition: margin-left .5s;
-  	}
   
-  	@media screen and (max-height: 450px){
-		.sidenav {padding-top: 15px;}
-		.sidenav a {font-size: 18px;}
-  	}
+@media screen and (max-height: 450px){
+	.sidenav {padding-top: 15px;}
+	.sidenav a {font-size: 18px;}
+}
 
 .head-2{
 	background-color: white;
-	width: 100%;
+	width: 90%;
 	height:120px;
-	position: relative;
 	display: flex;
 	justify-content: space-between;
 	margin-right: auto;
@@ -93,19 +95,21 @@ img{
 .search-input{
 	align-items: center;
 	display: flex;
-	padding-left: 25px;
 	width:200px;
 	justify-content: space-around;	
+	
 }
 
-{
+.search-header{
 	outline: none;
 	border: solid 1px grey;
+	width:150px;
 	height: 30px;
-	padding-left: 30px;
-	background: white url(../img/search-icon.png) no-repeat;
+	background: white url("../img/search-icon.png") no-repeat;
 	background-size: 1rem;
 	background-position: 6px;
+	padding-left: 25px;
+	margin-left: 20px;
 }
 
 .other-icons{
@@ -113,86 +117,12 @@ img{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	padding-right: 25px;
+
 }
 
-.banner{
-	width: 100%;
-	height: 600px;
-	position: fixed;
-	list-style: none;
-	padding: 0;
+form{
+	width:70%;
+	text-align: center;
+	margin:0 auto;
 }
 
-	.banner-item,
-	.banner-image{
-		height: inherit;
-		width: inherit;
-	}
-
-	.banner-item{
-		position: relative;
-	}
-
-	.banner-image{
-		object-fit: cover;
-		object-position: center center;
-		position: absolute;
-	}
-	.cycle-slideshow{
-		margin: 0;
-	}
-
-	.cycle-pager{
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		text-align: center;
-		z-index: 1000;
-	}
-		.cycle-pager span{
-			font-size: 60px;
-			color:black;
-			cursor: pointer;
-			display: inline-block;
-			margin: 5px;
-			opacity: .5;
-    		transition: opacity .6s ease;
-		}
-
-		.cycle-pager-active,
-		.cycle-pager span:hover{
-			color: white;
-		}
-
-	.banner-prev,
-	.banner-next{
-		text-decoration: none;
-		display: inline-block;
-		background-color: #000;
-		color: #fff;
-		width: 30px;
-		height: 30px;
-		line-height: 30px;
-		text-align: center;
-		border-radius: 50%;
-		position: absolute;
-		top: 50%;
-		z-index: 1000;
-	}
-	.banner-prev{
-		left: 10px;
-	}
-	.banner-next{
-		right: 10px;
-	}
-
-	.event{
-		width:80%;
-		text-align: center;
-		margin:0 auto;
-		
-		
-	}
-
- 
