--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,12 @@ html, body{
   padding-right: 70px;
 }
 
-.images{
-	display: flex;
-	flex-wrap: wrap;
-	
-}
 
-img{
-	width:100%;
+.images{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+
 	
 }
 
