--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ html, body{
 
 
 .images{
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	max-height: 100%;
 	object-fit: cover;
 
 	
@@ -119,8 +119,53 @@ html, body{
 }
 
 form{
-	width:70%;
-	text-align: center;
-	margin:0 auto;
+	background-image: url("../img/img4.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	height: 700px;
+	
+}
+
+	.form-box{
+		width:900px;
+		height: 550px;
+		margin-right: auto;
+		margin-left: auto;
+		background-color:#cb756f;
+		position: relative;
+  		top: 50%;
+  		transform: translateY(-50%);
+	}
+
+		.form-text{
+			width:650px;
+			height: 420px;
+			margin-right: auto;
+			margin-left: auto;
+			position: relative;
+  			top: 50%;
+			transform: translateY(-50%);
+			text-align: center; 
+		}
+
+	.form-input{
+		margin-top:7px;
+	}	
+
+h2{
+	font-size: 40px;
+}
+
+h3{
+	font-size: 25px;
+}
+
+h4{
+	margin-bottom:10px;
+	font-size: 20px;
+}
+
+.form-subheading{
+	margin-top:-30px;
 }
 
