--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,15 @@
 	and (min-device-width: 375px)
 	and (max-device-width: 767px)
 	and (orientation: portrait){
-		html{
-			font-family:'Times New Roman', Times, serif;
-			color: brown;
+		
 		}	
-	}
-
-@media only screen
-	and (min-device-width: 768px)
-	and (max-device-width: 1024px)
-	and (orientation: portrait){
-		html{
-			font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-			color:saddlebrown;
-		}
 	}
 
 @media only screen
 	and (min-device-width: 1025px)
 	and (max-device-width: 1280px)
 	and (orientation: portrait){
-		html{
-			font-family: Arial, Helvetica, sans-serif;
-			color: black;
+		
 		}
 	}
 
@@ -39,7 +25,7 @@ html, body{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 40px;
+	height: 40%;
 }
 
 .p-header{
@@ -150,8 +136,8 @@ form{
 }
 
 	.form-box{
-		width:900px;
-		height: 550px;
+		width:80%;
+		height: 75%;
 		margin-right: auto;
 		margin-left: auto;
 		background-color:#cb756f;
